TAG: qcreports_db-6-0-26-5
DATE: 12/16/2025
STAFF: lec
wts2-1778/sprt-161/Remove Obsolete Public, QC Reports
        deleted:    mgd/PRB_StrainJAX3.py
        deleted:    monthly/GXD_NotRouted.py
        deleted:    weekly/BIB_COVRefTagCounts.py
        deleted:    weekly/BIB_Covid.py

TAG: qcreports_db-6-0-26-4
DATE: 12/12/2025
STAFF: lec
wts2-1771/sprt-153/MGI GPI missing GCRPs as cross reference
run from reports_db/daily/GO_gpi.py

TAG: qcreports_db-6-0-26-3
DATE: 07/22/2025
STAFF: lec
        deleted:    mgd/GXD_HTRNASeq.py
	modified:   mgd/GXD_HTOverview.py
        modified:   qcr.shtml

TAG: qcreports_db-6-0-26-2
DATE: 07/11/2025
STAFF: lec
        modified:   mgd/GXD_SameStructure.py
	modified:   qcr.shtml

TAG: qcreports_db-6-0-26-1
DATE: 07/08/2025
STAFF: lec
wts2-1697/e4g-310/Display alleles associated with a strain in repository ID and strain name custom reports
        modified:   PRB_StrainNomenCheck.py
        modified:   PRB_StrainRepoCheck.py

TAG: qcreports_db-6-0-25-30
DATE: 07/07/2025
STAFF: lec
wts2-1695/e4g-304/tweak to GXD HT Experiment Partially Reviewed Papers custom report
        modified:   GXD_HTExperimentPMID.py
        modified:   pwireports.txt

TAG: qcreports_db-6-0-25-29
DATE: 06/30/2025
STAFF: lec
wts2-1691/e4g-302/produce on demand list of HT experiments selected to be curated
wts2-1692/e4g-303/list of HT experiments selected to be curated with PMIDs
        new file:   pwi/GXD_HTExperimentToDo.py
        new file:   pwi/GXD_HTExperimentToDoPMID.py
        modified:   pwi/pwireports.txt

TAG: qcreports_db-6-0-25-28
TAG: qcreports_db-6-0-25-27
DATE: 06/25/2025
STAFF: lec
wts2-1689/e4g-298/have GXDHT litriage status reflect HT Index curation status = done
	modified:   qcr.shtml
	new file:   mgd/BIB_CurationStatusMismatch_GXD.sql

TAG: qcreports_db-6-0-25-26
TAG: qcreports_db-6-0-25-25
DATE: 06/17/2025
STAFF: lec
undo
remove GXD_Triage archive
        modified:   qcr.shtml
        modified:   qcweekly_reports.csh
